#Implementação - Fase 1: Incluindo reset de Senha por token de recuperação.
